Step 1, query helper and basic test

--- a/src/KernelMemory.ElasticSearch.FunctionalTests/appsettings.json
+++ b/src/KernelMemory.ElasticSearch.FunctionalTests/appsettings.json
@@ -7,7 +7,8 @@
   "KernelMemory": {
     "Services": {
       "ElasticSearch": {
-        "ServerAddress": "http://localhost:9800"
+        "ServerAddress": "http://localhost:9800",
+        "IndexPrefix" : "testkm"
       },
       "AzureOpenAIText": {
         // "ApiKey" or "AzureIdentity"
@@ -24,7 +25,7 @@
         "APIType": "ChatCompletion",
         "MaxRetries": 10
       },
-      "AzureOpenAIEmbedding": {
+      "AzureOpenAI": {
         // "ApiKey" or "AzureIdentity"
         // AzureIdentity: use automatic AAD authentication mechanism. You can test locally
         //   using the env vars AZURE_TENANT_ID, AZURE_CLIENT_ID, AZURE_CLIENT_SECRET.
