--- a/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
+++ b/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
@@ -6,7 +6,7 @@
     <AssemblyName>KernelMemory.ElasticSearch</AssemblyName>
     <RootNamespace>KernelMemory.ElasticSearch</RootNamespace>
     <LangVersion>latest</LangVersion>
-    <Nullable></Nullable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
