--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     # services:
     #   elasticsearch:
     #     image: docker.elastic.co/elasticsearch/elasticsearch:8.13.0
@@ -53,6 +54,7 @@ jobs:
                   $response = Invoke-WebRequest -Uri $uri -Method Get -ErrorAction Stop
                   if ($response.StatusCode -eq 200) {
                       Write-Host "Successfully connected to $uri"
+                      Write-Host "Response content: $($response.Content)"
                       $sw.Stop()
                       return
                   }
@@ -107,5 +109,5 @@ jobs:
           dotnet restore "src/KernelMemory.ElasticSearch.sln"
           dotnet build "src/KernelMemory.ElasticSearch.sln" --no-restore --configuration debug
           # dotnet test "src/KernelMemory.ElasticSearch.FunctionalTests/KernelMemory.ElasticSearch.FunctionalTests.csproj" /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov
-
+          dotnet test "src/KernelMemory.ElasticSearch.FunctionalTests/KernelMemory.ElasticSearch.FunctionalTests.csproj" --no-build
           dotnet tool run dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
