Fixed source link support

--- a/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
+++ b/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
@@ -9,6 +9,8 @@
     <Nullable>enable</Nullable>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Deterministic>true</Deterministic>
+    <ContinuousIntegrationBuild Condition="'$(GITHUB_ACTIONS)' == 'true'">True</ContinuousIntegrationBuild>
   </PropertyGroup>
 
   <ItemGroup>
