--- a/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
+++ b/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
@@ -7,6 +7,8 @@
     <RootNamespace>KernelMemory.ElasticSearch</RootNamespace>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Deterministic>true</Deterministic>
