--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -8,6 +8,12 @@ on:
       - hotfix/*
       - release/*
   pull_request: 
+
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+
 jobs:
   build:
     name: Build
@@ -22,6 +28,7 @@ jobs:
         options: --health-cmd="curl http://localhost:9200/_cluster/health" -e "discovery.type=single-node" -e "xpack.security.enabled=false"
 
     steps:
+      
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -68,6 +75,11 @@ jobs:
         shell: pwsh
         run: |
           ./build.ps1 -nugetPublish $true -nugetApiKey ${{ secrets.NUGET_API_KEY }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: 'artifacts/NuGet'
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
