--- a/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
+++ b/src/KernelMemory.ElasticSearch/KernelMemory.ElasticSearch.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Alkampfer.KernelMemory.Extensions.Interfaces" Version="0.4.0-configuration0014" />
+    <PackageReference Include="Alkampfer.KernelMemory.Extensions.Interfaces" Version="0.4.0" />
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.13.10" />
     <PackageReference Include="Microsoft.KernelMemory.Abstractions" Version="0.38.240424.2" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
@@ -38,9 +38,9 @@
     <Product>ElasticSearch connector for Kernel Memory</Product>
     <Description>ElasticSearch connector for Kernel Memory implements the IDbMemory interface.</Description>
     <PackageTags>Memory, RAG, Kernel Memory, ElasticSearch, AI, Artificial Intelligence, Embeddings, Vector DB, Vector Search, ETL</PackageTags>
-    <Authors>Your Name</Authors>
-    <Company>Your Company</Company>
-    <Copyright>Your Copyright</Copyright>
+    <Authors>Gian Maria Ricci</Authors>
+    <Company>Gian Maria Ricci</Company>
+    <Copyright>(c) 2024</Copyright>
     <Version>1.0.0</Version>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryType>git</RepositoryType>
