Added dispatch on workflow

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -9,6 +9,8 @@ on:
       - release/*
   pull_request: 
 
+  workflow_dispatch: # <-- Add this line to enable manual runs
+
 permissions:
   id-token: write
   contents: read
