--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -9,6 +9,7 @@ on:
       - release/*
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch: # <-- Add this line to enable manual runs
 jobs:
   build:
     name: Build and analyze
